--- a/myApp/src/pages/tournamentsdirectorhome/tournamentsdirectorhome.html
+++ b/myApp/src/pages/tournamentsdirectorhome/tournamentsdirectorhome.html
@@ -1,13 +1,12 @@
 <!--
-  Generated template for the Page1 page.
+  Generated template for the Tournamentsdirectorhome page.
 
   See http://ionicframework.com/docs/v2/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-
 <ion-header>
   <div class="row">
-        <div class="row logoo" style="width:80%;">
+        <div class="row logoo" style="width: 80%;">
         <ion-list class="selectlist">
           <ion-item class="ionitemclass myclass">
             <ion-label floating class="ionlabelclass">Court</ion-label>
@@ -61,8 +60,10 @@
             <ion-label floating class="ionlabelclass">Format</ion-label>
             <ion-select class="ionselected" [(ngModel)]="SelectedFormatName">
                   <ion-option (ionSelect)="SelectedFormat('2 of 3 to 11')">2 of 3 to 11</ion-option>
-                  <ion-option (ionSelect)="SelectedFormat('1 to 15')">1 to 15</ion-option>
-                  <ion-option (ionSelect)="SelectedFormat('1 to 21')">1 to 21</ion-option>
+                  <ion-option (ionSelect)="SelectedFormat('1 to 15')">1 to 15 Win By 1</ion-option>
+                  <ion-option (ionSelect)="SelectedFormat('1 to 21')">1 to 21 Win By 1</ion-option>
+                  <ion-option (ionSelect)="SelectedFormat('1 to 15 win By 2')">1 To 15 Win By 2</ion-option>
+                  <ion-option (ionSelect)="SelectedFormat('1 to 21 win By 2')">1 To 21 Win By 2</ion-option>
             </ion-select>
           </ion-item>
         </ion-list>
@@ -81,7 +82,6 @@
     </div>
 </div>
 </ion-header>
-
 <ion-content class="contentbg">
   <ion-card class="mainioncard row" style="margin-top: 50px" *ngIf="ShedulecourtListArray.length>0">
     <div class="courtcontent" *ngFor = "let Obj of ShedulecourtListArray">
@@ -107,7 +107,7 @@
               <p class="playerdet" style="padding:0 5px ;margin-left:7px;">{{Obj.Team2.Players[0]['Name']}}<span *ngIf="Obj.Team2.Players.length > 1">/<span>{{Obj.Team2.Players[1]['Name']}}</span></span></p>
         </div>
          <div  class="alignmentfg" >
-              <p class="playerdet paddingpt"  justify-content-around><span style="font-size:12px;color:currentColor;font-weight: bold;">Format</span> <span>:</span><span>{{Obj.GameFormat}}</span></p>
+              <p class="playerdet paddingpt"  justify-content-around><span style="font-size:12px;color:currentColor;font-weight: bold;">Format</span> <span>:</span><span>{{Obj.GameFormatName}}</span></p>
         </div>
         <div  class="alignmentfg">
               <p class="playerdet paddingpt"  justify-content-around><span style="font-size:12px;color:currentColor;font-weight: bold;">Referee</span> <span>:</span><span>{{Obj.Referee}}</span></p>
